# paca-logistics-automations

./: .eslintrc.json  .gitignore  AGENTS.md  AUTOMATION_PROMPT.md  CHANGELOG.md  CLAUDE.md  CNAME  DEPLOY.md  FEATURES.md  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  pages.yml  release.yml
public/: 404.html
scripts/: gen-cities.mjs  gen-skill.ts
server/: index.ts
server/lib/: anthropic.ts  cost.ts  storage.ts
server/routes/: auth.ts  blacklist.ts  budget.ts  claude.ts  settings.ts
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: lib.rs  main.rs
src/components/: BlacklistDialog.tsx  BlacklistManager.tsx  BlacklistSection.tsx  BrandLogo.tsx  BudgetMeter.tsx  CanadaMap.tsx  CarrierResearch.tsx  ChipInput.tsx  CitySearch.tsx  CommandPalette.tsx  CostBadge.tsx  DevPanel.tsx  EmptyState.tsx  LanePicker.tsx  LanguageSwitcher.tsx  LeadsMap.tsx  LockButton.tsx  LockScreen.tsx  PillGroup.tsx  RegionPicker.tsx  ResultTable.tsx  SelectionSummary.tsx  Sidebar.tsx  Skeleton.tsx  TerritoryRow.tsx  ThemeToggle.tsx
src/core/: audit-log.ts  blacklist.ts  budget.ts  claude-client.ts  context.ts  crypto.ts  db.ts  extract-json.ts  i18n.ts  lock-store.ts  runtime-secrets.ts  settings-store.ts  skill-registry.ts  types.ts
src/locales/: en.json  fr.json
src/pages/: History.tsx  (+2 more)
(+41 files in other folders)
