[package]
name = "transport-paca"
version = "0.1.0"
description = "Transport Paca — Carrier intelligence desktop app"
authors = ["Transport Paca"]
edition = "2021"

[lib]
name = "transport_paca_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
